{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "camera",
            "id": "8220334f-0cbc-4dae-a0a9-d0917ca4744b",
            "actions": [
                {
                    "name": "orbit",
                    "type": "Value",
                    "id": "33d48201-2b90-4323-b6fe-23131bc66282",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "zoom",
                    "type": "Value",
                    "id": "f041c016-e837-4459-862a-59737fdf32cd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "cd901c1d-dc00-42ec-a516-ae7d3672be57",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "orbit",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "10f36108-4213-491b-9b6f-3dbffe70fb78",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2356e695-71a4-4d83-9b84-79e64256b93b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "44408515-3a55-4fe8-92fb-5b3c1e055c78",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5ac5096a-1b8c-47e3-94f7-18afacf1d160",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "orbit",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0e1494aa-a6c0-4cd7-8d61-892dcf016d7d",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "player",
            "id": "8a6db0e9-2605-4497-b037-f3ae678ea9b3",
            "actions": [
                {
                    "name": "click",
                    "type": "Button",
                    "id": "073f799d-b5ac-4686-97bd-376b928af667",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "rightClick",
                    "type": "Button",
                    "id": "988e8d06-9472-4272-98d6-9645a3e329c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "move",
                    "type": "Value",
                    "id": "cca14e45-cf25-487e-8ba7-15eafe2b4924",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f08800b-205d-4293-b4bd-402c22ed1eda",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4aec6d7-80be-49e7-b6ff-c097eed0dd36",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22e85be2-dd49-48c7-92e0-382ae7a4463c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "optionsBox",
            "id": "6f82cca5-0a93-4e79-ab54-70473a18268b",
            "actions": [
                {
                    "name": "select",
                    "type": "Button",
                    "id": "39f93bc2-e5e2-4dc7-bc88-4fa5be8889eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hoverOn",
                    "type": "Value",
                    "id": "a007f862-a553-4f19-82a2-9b634fa4b670",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1df4cb6a-56e5-456d-8e80-7cfabf331f91",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "926b9645-e917-4850-ab74-6f7272e8786e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "hoverOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "inventory",
            "id": "8355ef86-9dc7-43a4-8341-e5ae57b94c90",
            "actions": [
                {
                    "name": "select",
                    "type": "Button",
                    "id": "bc786fec-9f01-418f-b1ca-3da20ab1860c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "options",
                    "type": "Button",
                    "id": "99630a9c-8fcb-4bcd-b4d3-9c9f319b4538",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "hoverOn",
                    "type": "Value",
                    "id": "a9f8b63d-0cf0-49c4-bae2-d35fab7610f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88603ec4-0c20-4b9d-b119-d862b03ebf36",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa21307f-a3fe-4ec3-ba2d-873724d584af",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "options",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5071b1fe-34d2-4fcf-8451-3f1fafb643de",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "hoverOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}